tests/lit/tcheck/immutable_08.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

let C : Integer := 1;

function F()
begin
    C := 2;
// CHECK: Type error: assignment to immutable variable `C` declared at
end
